--- a/index.html
+++ b/index.html
@@ -6,3 +6,5 @@
 <body>
 <h1> Hi, this site was moved to home.0xdc.icu </h1>
 <h2> Any bypasses using this page should be deleted and you should re-import them from the new site with the updated url </h2>
+  </body> 
+</html>
